<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xiaweizi.marqueetextview.MainActivity">

    <com.xiaweizi.marquee.MarqueeTextView
        android:id="@+id/marquee1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/string1"
        android:textColor="#ff0000"
        android:textSize="18sp"
        app:scroll_first_delay="0"
        app:scroll_interval="2000"
        app:scroll_mode="mode_forever" />

    <com.xiaweizi.marquee.MarqueeTextView
        android:id="@+id/marquee2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/string2"
        android:textColor="#ffbb00"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/marquee1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/marquee1"
        app:scroll_first_delay="0"
        app:scroll_interval="10000"
        app:scroll_mode="mode_forever" />

    <com.xiaweizi.marquee.MarqueeTextView
        android:id="@+id/marquee3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:text="@string/string3"
        android:textColor="#2fff00"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/marquee2"
        app:scroll_first_delay="1000"
        app:scroll_interval="30000"
        app:scroll_mode="mode_forever" />

    <com.xiaweizi.marquee.MarqueeTextView
        android:id="@+id/marquee4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:text="@string/string4"
        android:textColor="#00e1ff"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/marquee3"
        app:scroll_first_delay="0"
        app:scroll_interval="10000"
        app:scroll_mode="mode_once" />

    <Button
        android:id="@+id/pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/pause"
        app:layout_constraintBottom_toBottomOf="@+id/resume"
        app:layout_constraintStart_toEndOf="@+id/resume"
        app:layout_constraintTop_toTopOf="@+id/resume" />

    <Button
        android:id="@+id/restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/restart"
        app:layout_constraintBottom_toBottomOf="@+id/pause"
        app:layout_constraintEnd_toStartOf="@+id/stop"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/pause"
        app:layout_constraintTop_toTopOf="@+id/pause"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/resume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/stop"
        app:layout_constraintBottom_toBottomOf="@+id/restart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/restart" />

</android.support.constraint.ConstraintLayout>
